--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -25,5 +25,16 @@
         ]
       }
     }
+  ],
+  "dataGroups": [
+    {
+      "name": "api",
+      "urls": ["/api/hello"],
+      "cacheConfig": {
+        "maxSize": 1,
+        "maxAge": "1m",
+        "strategy": "freshness"
+      }
+    }
   ]
 }
