update SW config now 31d

--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -32,7 +32,7 @@
       "urls": ["/api/hello"],
       "cacheConfig": {
         "maxSize": 1,
-        "maxAge": "1m",
+        "maxAge": "31d",
         "strategy": "freshness"
       }
     }
